# remu64

./: .gitignore  Cargo.toml  README.md  prompt.md  test_debug.rs  test_pmaxub.rs
amd64-emu/: Cargo.toml  check_mul.rs  check_mul2.rs  check_pmuludq.rs  test_debug.rs  test_decode.rs  test_immediate.rs  test_layout.rs  test_memsize.rs  test_pmullw_debug.rs  test_rip_debug.rs  test_sse2_debug.rs
amd64-emu/examples/: debug_carry.rs  hooks.rs  simple.rs  test_adc.rs
amd64-emu/src/: cpu.rs  decoder.rs  engine.rs  error.rs  hooks.rs  lib.rs  memory.rs
amd64-emu/tests/: adc_sbb_test.rs  advanced_instructions_test.rs  basic_test.rs  bit_manipulation_test.rs  debug_pmullw_mem.rs  loop_test.rs  mul_div_test.rs  scalar_fp_test.rs  sse2_comparison_test.rs  sse2_integer_test.rs  sse2_multiply_test.rs  sse2_new_instructions_test.rs  sse2_pack_test.rs  sse2_pmaddwd_test.rs  sse2_shift_test.rs  sse2_unpack_test.rs  sse4_extension_test.rs  sse_comparison_test.rs  sse_conversion_test.rs  sse_shuffle_test.rs  sse_test.rs  string_ops_test.rs
dump_exec/: Cargo.toml  README.md
dump_exec/examples/: batch_string_processing.rs  string_encryption_fun.rs
dump_exec/src/: execution_controller.rs  executor.rs  fastcall.rs  lib.rs  main.rs  memory_manager.rs  minidump_loader.rs  minidump_memory.rs  process_trait.rs  stack_manager.rs  tracer.rs  vm_context.rs
rdex/: CLAUDE.md  Cargo.toml
rdex/examples/: batch_string_processing.rs  string_encryption_fun.rs
rdex/src/: execution_controller.rs  executor.rs  fastcall.rs  lib.rs  main.rs  memory_manager.rs  minidump_loader.rs  minidump_memory.rs  pe_symbolizer.rs  process_trait.rs  stack_manager.rs  symbolizer.rs  tracer.rs  vm_context.rs
remu64/: Cargo.toml  cook.sh
remu64-protocol/: Cargo.toml
remu64-protocol/src/: lib.rs
remu64-tui/: Cargo.toml  TODO_REFACTOR.md
remu64-tui/examples/: fname.rs  fsd.rs
remu64-tui/src/: app.rs  config.rs  lib.rs  main.rs  minidump_provider.rs  protocol_server.rs  tracer.rs  ui.rs
remu64/examples/: debug_carry.rs  hooks.rs  simple.rs  test_adc.rs  test_shld_cf.rs
remu64/src/: cpu.rs  engine.rs  error.rs  hooks.rs  lib.rs  memory.rs
remu64/src/engine/instructions/: arithmetic.rs  avx_arithmetic.rs  bit_manipulation.rs  bitwise.rs  comparison.rs  conditional_mov.rs  conditional_set.rs  control_flow.rs  data_transfer.rs  misc.rs  mod.rs  packed_conversion.rs  packed_integer.rs  packed_misc.rs  packed_shuffle.rs  sse_arithmetic.rs  sse_conversion.rs  sse_logical.rs  sse_shuffle.rs  string_ops.rs  system.rs
remu64/tests/: adc_sbb_test.rs  advanced_instructions_test.rs  andn_test.rs  avx_arithmetic_test.rs  avx_comparison_test.rs  avx_logical_test.rs  avx_shuffle_test.rs  avx_sqrt_test.rs  basic_test.rs  bextr_test.rs  bit_manipulation_test.rs  blsi_test.rs  blsmsk_test.rs  blsr_test.rs  bzhi_test.rs  clflush_test.rs  cmovcc_extended_test.rs  interrupt_test.rs  loop_test.rs  lzcnt_tzcnt_test.rs  memory_fence_test.rs  mul_div_test.rs  mulx_test.rs  page_boundary_test.rs  pause_test.rs  pdep_test.rs  pext_test.rs  rcl_rcr_test.rs  rorx_test.rs  rorx_test_debug.rs  sarx_shlx_shrx_test.rs  scalar_fp_test.rs  setcc_simple_test.rs  shld_shrd_test.rs  sse2_comparison_test.rs  sse2_integer_test.rs  sse2_multiply_test.rs  sse2_new_instructions_test.rs  sse2_pack_test.rs  sse2_pmaddwd_test.rs  (+12 more)
src/: cpu.rs  decoder.rs  engine.rs  error.rs  hooks.rs  memory.rs
tests/: basic_test.rs  loop_test.rs  sse_test.rs
