[workspace]
resolver = "2"
members = ["amd64-emu"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["AMD64 Emulator Contributors"]
description = "Pure Rust AMD64 emulator with Unicorn Engine-like API"
license = "MIT OR Apache-2.0"
keywords = ["emulator", "x86-64", "amd64", "cpu", "unicorn"]
categories = ["emulators", "simulation"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"
