[workspace]
resolver = "2"
members = ["remu64", "rdex", "remu64-tui", "remu64-protocol"]

[profile.release]
debug = true

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["trumank"]
description = "Pure Rust AMD64 emulator with Unicorn Engine-like API"
license = "MIT OR Apache-2.0"
keywords = ["emulator", "x86-64", "amd64", "cpu", "unicorn"]
categories = ["emulators", "simulation"]
