[package]
name = "rdex"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
remu64 = { version = "0.1.0", path = "../remu64" }
minidump = "0.21"
anyhow = "1.0"
memmap2 = "0.9"
iced-x86 = "1.21"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
