[package]
name = "remu64-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Terminal user interface for remu64 minidump debugging"
license.workspace = true

[dependencies]
remu64 = { path = "../remu64" }
rdex = { path = "../rdex" }
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
iced-x86 = "1.21"

[[bin]]
name = "remu64-tui"
path = "src/main.rs"